--- a/thesis.tex
+++ b/thesis.tex
@@ -180,8 +180,8 @@
 
 % ======= ======= ======= ======= ======= ======= =======
 
-\chapter*{Acknowledgements}
-\input{00_acknowledgements/acknowledgements.tex}
+%\chapter*{Acknowledgements}
+%\input{00_acknowledgements/acknowledgements.tex}
 
 % ======= ======= ======= ======= ======= ======= =======
 
