--- a/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
+++ b/06_mirrorshades_studies_results/mirrorshades_studies_results.tex
@@ -440,13 +440,13 @@ Log data show participants displaying restricted head movement throughout the pa
 
 \label{chapter-eval-2}
 
-The first stage of investigation with the Mirrorshades platform revealed that applying a mobile parallel reality system to a cultural heritage scenario provides an experience that is both more enjoyable and more engaging than a stationary virtual heritage scenario making use of immersive VR presentation via CAVE or HMD when seated, and also leads participants to a greater understanding of the relationships between the RW and VR content presented to them. This chapter recounts investigations into how certain aspects of the Mirrorshades platform affect the overall experience of mobile parallel reality and the findings are used to establish a set of best practices for informing future parallel reality implementations. These investigations explore the way that transitions between RW and VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW and VR, as participants in stage 1 of the evaluation were furnished with only a single style of transition.
+The first stage of investigation with the Mirrorshades platform revealed that applying a mobile parallel reality system to a cultural heritage scenario provides an experience that is both more enjoyable and more engaging than a stationary virtual heritage scenario making use of immersive VR presentation via CAVE or HMD when seated, and also leads participants to a greater understanding of the relationships between the RW and VR content presented to them. This chapter recounts investigations into how certain aspects of the Mirrorshades platform affect the overall experience of mobile parallel reality and the findings are used to establish a set of best practices for informing future parallel reality implementations. These investigations explore the way that transitions between RW and VR visual stimuli are performed, including whether the default view is 100\% RW or a mix of RW and VR, aspects identified in section \ref{design-considerations-for-rw-vr-transitions} as likely to have a direct effect upon the severity of the break in presence experienced when performing such transitions.
 
 %=========================================================================================================
 
 \section{Overview}
 
-Stage 2 of the investigation comprises two parts. The first (stage 2.1), focussed upon assessing participants' reactions and preferences toward four different transition styles, while the second (stage 2.2), looked at reactions and preferences in response to two different default views comprising RW/VR mixes. In terms of the combined Milgram/Waterworh model, these investigations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations, using different techniques, along the locus of attention axis. Stage 2.1 investigates oscillations wherein the default view is 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looks at oscillations wherein the default view is a mix of RW and VR, limiting how far toward the RW extreme of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
+Stage 2 of the investigation comprises two parts. The first (stage 2.1), focussed upon assessing participants' reactions and preferences toward four different transition styles (the first aspect identified in section \ref{design-considerations-for-rw-vr-transitions}), while the second (stage 2.2), looked at reactions and preferences in response to two different default views comprising RW/VR mixes (the second aspect identified in section \ref{design-considerations-for-rw-vr-transitions}). In terms of the combined Milgram/Waterworh model, these investigations pertain to assessing the effect upon participants' focus of attention (the severity of the break in presence) when performing oscillations, using different techniques, along the locus of attention axis. Stage 2.1 investigates oscillations wherein the default view is 100\% RW, with participants performing oscillations between the RW extreme of the locus of attention axis and other points upon the it (such as in figure \ref{transition-rw-vr-hard.png}), while stage 2.2 looks at oscillations wherein the default view is a mix of RW and VR, limiting how far toward the RW extreme of the locus axis the participant can reach (such as in figure \ref{transition-mix-vr.png}).
 
 While stage 1 of the investigation saw the suitability of applying a mobile parallel reality platform to the particular use case of virtual heritage, stage 2 while still within the same virtual heritage scenario has wider use for informing implementation of parallel reality systems in general.
 
@@ -1365,7 +1365,7 @@ Stage 2.2 further investigated the concept of presentation of VR visual stimuli 
 Together, the investigations explored the two fundamental aspects of transitions identified in section \ref{design-considerations-for-rw-vr-transitions} between the constituent RW and VR environments of a parallel reality system that were expected to have a direct bearing on the severity of the break in presence experienced when performing these transitions. Considering the findings of these investigations, several best practices for future parallel reality implementations are proposed;
 
 \begin{enumerate}
-	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing the same observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
+	\item Both a 100\% RW and a 100\% VR view should be provided, though these do not have to be the default RW and VR positions. A 100\% VR view is diagnostic for situations in which the user wishes to perform deliberate in depth observations of a VR object, while a 100\% RW view is important both for performing the same observations of RW objects but also such that movement in the RW environment can be made as comfortable as possible for the user. Whilst improvements to HMDs and associated video see-through technologies, along with improvements to the accuracy of indoor positioning systems, will undoubtedly mitigate the detrimental effects of walking while using a video see-through HMD based parallel reality system such as Mirrorshades, the ability to revert to a 100\% RW view will ensure that the experience of walking in such a situation is presented at its most comfortable.
 	\item A view that provides less than 100\% RW without the need to keep a control activated should be provided. Presenting VR visuals in this manner, such that the user receives VR stimuli even without consciously thinking to perform a transition to VR or a RW/VR mix, has shown to have a positive effect both upon participant awareness of the VR content and the relationship between this content and the RW environment and also promote observation of RW vantages that might otherwise only be seen through VR. The balance between RW and VR visuals in such a view needs to be carefully considered, as although reducing RW visuals more in the evaluations led to heightened awareness and understanding of the relationship between the environments, it was the less drastically reduced RW view that was preferred overall.
 	\item A method of transitioning between default RW and VR positions that allows the user to both control the speed of the transition and to stop at any intermediary level between 100\%RW/0\%VR and 0\%RW/100\%VR should be provided. This style of transition was clearly the best received throughout the evaluations and participants often used this transition to pause at intermediary opacities.
 \end{enumerate}
